<resources>
    <string name="app_name">Travel</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="you_will_travel_by">You will travel by ?</string>
    <string name="number_of_passenger">number of passenger</string>
    <string name="search_flights">Search Flights</string>
    <string name="round">Round</string>
    <string name="one_way">One-way</string>
    <string name="multi">Multi</string>
    <string name="departure_date">Departure Date</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="click_to_proceed">Click to proceed</string>
    <string name="search">Search</string>
    <string name="plane">Plane</string>
    <string name="train">Train</string>
    <string name="car">Car</string>
    <string name="save_changes">Save Changes</string>
    <string name="greece">Greece</string>
    <string name="air_costa">Air Costa</string>
    <string name="india">India</string>
    <string name="_200k">200k</string>
</resources>
