<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Controllers.PlaneActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/plane2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="170dp"
        android:background="@drawable/image_circle_drawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plain" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btnRound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_gradient"
                android:onClick="planeRoundClicked"
                android:text="@string/round"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnOneWay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="planeOneWayClicked"
                android:text="@string/one_way"
                android:textColor="@color/gray" />

            <Button
                android:id="@+id/btnMulti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:onClick="planeMultiClicked"
                android:text="@string/multi"
                android:textColor="@color/gray" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="15dp"
            android:layout_marginTop="5dp"
            android:paddingRight="15dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/bookNumberOfPassenger"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                android:drawableTint="@color/gray"
                android:ems="10"
                android:hint="@string/number_of_passenger"
                android:inputType="number" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/class_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/departureBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="departureDate"
                android:background="@android:color/transparent"
                android:text="@string/departure_date"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/arrivalBtn"
                android:textAllCaps="false"
                android:onClick="arrivalDate"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/arrival_date" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"

            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray" />

        <Button
            android:id="@+id/searchFlightsBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_gradient"
            android:onClick="searchFlights"
            android:text="@string/search_flights"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/searchFlightProgressDialog"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>